--- a/theme/css/content.css
+++ b/theme/css/content.css
@@ -10,6 +10,10 @@ hr {
    display:none;
 } 
 
+article img { 
+ width:100%;
+} 
+
 article blockquote {
   color: #555;
   border-left: 5px solid #ccc; 
